plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

ext {
    springCloudVersion = "2023.0.3"
}

group = 'uz.ksan.backend'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

repositories {
    mavenCentral()
}

dependencies {


//    testImplementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-api', version: '2.6.0'

    //spring cloud
    implementation 'org.springframework.cloud:spring-cloud-dependencies:Hoxton.RELEASE'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:2.2.5.RELEASE'

    // jsonwebtoken
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.6'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.6'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.6'


    //mapper
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'

    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'


    // i/o validation
//    implementation 'org.springframework.boot:spring-boot-starter-validation'


    //spring mail
//    implementation 'org.springframework.boot:spring-boot-starter-mail'
//    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'


    //spring security and thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-security'
//    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.2.RELEASE'
//    testImplementation 'org.springframework.security:spring-security-test'


    //spring framework
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'


    //Mokito unit test
    repositories { mavenCentral() }
    dependencies { testImplementation "org.mockito:mockito-core:3.+" }


    //h2 database
    runtimeOnly 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


    //spring WEB
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'


    // RabbitMQ
//    testImplementation 'org.springframework.amqp:spring-rabbit-test'
//    implementation 'org.springframework.boot:spring-boot-starter-amqp'


    //postgreSQL
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.1.4'


    // lombok
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    testCompileOnly 'org.projectlombok:lombok:1.18.34'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'

    //redis & cache
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'


}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
    }
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '-XX:+EnableDynamicAgentLoading', '-Djdk.instrument.traceUsage'
}
